# arctisbattery

./: .gitignore  ArctisBattery.spec  README.md  build.bat  debug.py  main.py  pyproject.toml
.github/workflows/: release.yml
